# flappy-in-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  prefabs.rs  scenes.rs  systems.rs
src/prefabs/: background.rs  bird.rs  button.rs  ground.rs  pipes.rs  scoreboard.rs
src/scenes/: game.rs  mod.rs  title.rs
src/systems/: mod.rs  physics.rs  scenemanagement.rs  storage.rs
