[package]
name = "flappy-in-rust"
version = "0.1.0"
authors = ["Johan Lindfors <johan.lindfors@coderox.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetra = "0.3.1"
rand = "0.7"
vek = { version = "0.9.10", default-features = false }